# nexus-8

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/: nexus_cpu.h  nexus_isa.h
core/src/: cpu.c
docs/: 00-charter.md  sprint_plan.md
docs/sprint-notes/: sprint1.md
tests/: CMakeLists.txt  test_main.c
tools/assembler/: CMakeLists.txt
